cleanup in CSharpToJavaConverter